--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -103,3 +103,10 @@ app:
     queue-url: ${SQS_QUEUE_URL:http://localhost:4566/000000000000/transacoes-financeiras-processadas}
   batch:
     size: 1000
+
+
+
+aws:
+  sqs:
+    queue:
+      transactions: transacoes-financeiras-processadas
