feat: Adicionado arquivo docker compose para criar as tabelas

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,8 +3,8 @@ spring:
     name: account-balance
   datasource:
     url: jdbc:postgresql://localhost:5432/transaction_db
-    username: postgres
-    password: password
+    username: ${USER}
+    password: ${PASS}
     hikari:
       maximum-pool-size: 20
       minimum-idle: 5
